--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: Hello world action step
       id: hello
-      uses: action-test
+      uses: shayanjaleel/action-test
       with:
         who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
