--- a/act/action.yml
+++ b/act/action.yml
@@ -6,6 +6,10 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+  second-input:  # id of input
+    description: 'Who NOT to greet'
+    required: true
+    default: 'insafd'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
