--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,7 @@ jobs:
         id: hello
         with:
           who-to-greet: 'Mona the Octodoge'
+          second-input: 'anoM the ostrich'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
